# fitness-bot

./: .gitignore  README.md  bot.py  claude_api.py  config.py  google_docs.py  pyproject.toml  requirements.txt  scheduler.py
fitness-bot-env/: pyvenv.cfg
tests/: __init__.py  test_claude_api.py
